# tutorial-dbus

./: README.md  tutorial-parte-1.md
libdbus/: Makefile  hello-sender  main.cpp
qdbus/: CMakeLists.txt  dbusGreeter.cpp  dbusGreeter.h  main.cpp
